Bug 1455950 - Increased contrast on dark theme UI text links. r=dao
MozReview-Commit-ID: Kg4opEGVR4H

UltraBlame original commit: 8579efe6135a275fe5c29b2c7970cb0cec4f88fd

--- a/browser/themes/shared/browser.inc.css
+++ b/browser/themes/shared/browser.inc.css
@@ -184,6 +184,39 @@ themeTransition
 }
 /
 *
+Increase
+contrast
+of
+UI
+links
+on
+dark
+themes
+*
+/
+:
+root
+[
+lwt
+-
+popup
+-
+brighttext
+]
+panel
+.
+text
+-
+link
+{
+color
+:
+#
+45a1ff
+;
+}
+/
+*
 Toolbar
 /
 content
